[package]
name = "opal-kit"
version = "0.0.1"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
libc = "0.2"
rustix = "0.38"
nix = { version = "0.27" }
linux-sed-opal-sys = { version = "0.1", features = [ "linux_6_1" ] }
regex = "1.9.1"
errno = "0.3"
hexdump = "*"
env_logger = "0.10"
log = "0.4"
